backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3  # scale > 1 to meet the assignment requirement
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
    spec:
      containers:
        - name: app
          image: dev.local/d22/backend
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP

          # Env vars so main.py can find Redis
          readinessProbe:
            httpGet:
              port: web
              path: /healthz
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3

          livenessProbe:
            httpGet:
              port: web
              path: /healthz
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 1
            failureThreshold: 3
